--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 Ignore what you must ignore
+
+# Ignore Mac system files
+.DS_store
+
+# Ignore node_modules folder
+node_modules
+
+# Ignore files related to API keys
+.env
+
+# Ignore SASS config files
+.sass-cache
