--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Read, Add, Update and Delete Activity",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/mshrestha8080/ToDoAPI/issues"
   },
-  "homepage": "https://github.com/mshrestha8080/ToDoAPI#readme"
+  "homepage": "https://github.com/mshrestha8080/ToDoAPI#readme",
+  "dependencies": {
+    "body-parser": "^1.19.2",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "mongoose": "^6.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
